# pral

./: plot_fit.py  requirements_dev.txt  setup.cfg
.github/workflows/: mypy.yaml  test_coverage.yaml  tests.yml
.trunk/: trunk.yaml
.trunk/configs/: .bandit
pral/: __init__.py  loss.py
tests/: test__InputParam.py  test_script.py
