[metadata]
name = pral
version = 0.0.0
description = some tools to do active learning for programmable materials
long_description = file: README.md
long_description_content_type = text/markdown
author = Ludwig Schneider
url = https://github.com/InnocentBug/pral
license = GPL
license_files = LICENSE.md
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7

[options]
packages = find:
python_requires = >=3.9
install_requires =
        numpy>=1.25.2
	h5py>=3.1.0
	matplotlib>=3.3.4
	scipy>=1.10.1
